--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
     "files.associations": {
         "stdio.h": "c",
         "stdlib.h": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "bitset": "c",
+        "chrono": "c",
+        "algorithm": "c",
+        "hash_map": "c",
+        "hash_set": "c"
     }
 }
